--- a/README
+++ b/README
@@ -1,2 +1,14 @@
 Google search in sublime text 2.
 
+USAGE:
+
+Search selected text
+* Select text
+* Right click on it and click "search selection"
+   OR
+  Press Ctrl+Shift+g (Cmd+Shift+g on Mac OS X)
+* See results on native popup menu
+* Press enter to open in browser
+
+TODO:
+Search user's input text
